# Index-ADT

./: CMakeLists.txt  INF.docx  Makefile  README.md  benchVersion1.txt  benchVersion2.txt  bench_index  bench_index2  gmon.out  index  indexVersion2  report.txt  test_index  test_index2
bench_index2.dSYM/Contents/: Info.plist
data/: hamlet.txt  treasure_island.txt
doc/html/: _r_e_a_d_m_e_8md.html  annotated.html  benchmark_8c.html  classes.html  common_8c.html  common_8h.html  common_8h_source.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_d44c64559bbebec7f509842c48db8b23.html  files.html  functions.html  functions_vars.html  globals.html  globals_defs.html  globals_func.html  globals_type.html  globals_vars.html  hashmap_8c.html  index.html  index_8c.html  index_8h.html  index_8h_source.html  jquery.js  linkedlist_8c.html  list_8h.html  list_8h_source.html  main_8c.html  map_8h.html  map_8h_source.html  md__r_e_a_d_m_e.html  menudata.js  pages.html  printing_8h.html  printing_8h_source.html  structindex.html  structlist.html  structlist__iter.html  structlistnode.html  structmap.html  structmapentry.html  (+12 more)
doc/latex/: annotated.tex  benchmark_8c.tex  common_8c.tex  common_8h.tex  common_8h_source.tex  dir_68267d1309a1af8e8297ef4c3efbcdba.tex  dir_d44c64559bbebec7f509842c48db8b23.tex  files.tex  hashmap_8c.tex  index_8c.tex  index_8h.tex  index_8h_source.tex  linkedlist_8c.tex  (+27 more)
include/: common.h  index.h  list.h  map.h  printing.h  trie.h  ui.h
src/: benchmark.c  common.c  hashmap.c  index.c  indexVersion2.c  linkedlist.c  main.c  test.c  timer.c  trie.c  ui.c
(+100 files in other folders)
